tests/NormalTests/paczka1/fuzzy1/99690908.err
Error in line 3: MN4Wj7DT S181 02,2
Error in line 6: nvymG9twnd A33 222,7
Error in line 15: VtAQPa S169 98,6
Error in line 32: A33 S169 85,2
Error in line 34: A33 S181 75,4
